# contract-compliance

./: main.py  pyproject.toml
config/: settings.py
data/contracts/: gemini_contract_analysis_AmazonContract.0.pdf.md  sample.txt  sample2.txt
data/embeddings/: chroma.sqlite3
data/rules/: employment_rules.json
modules/: compliance_engine.py  document_processor.py  pyproject.toml  vector_store.py
modules/agents/: .env  base_agent.py  compliance_agent.py  embeddings_agent.py  enhanced_base_agent.py  gemini_orchestrator_agent.py  pyproject.toml
modules/agents/__pycache__/: .env
modules/tools/: contract_tools.py  gemini_tools.py
